# KeyRemapper

./: .gitignore  CMakeLists.txt  README  README.md  lankey.h  mkr.conf  remaper.c  uinput-keyboard.c
heact/: LICENSE  array.h  arraytree.h  base64.h  base90.h  crc32.h  dbg.h  he_socket.h  heact.h  ini.h  md5.h  perfmon.h  rand.h  sha1.h  threading.h
